<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">KartaView</string>
    <string name="app_title">KartaView</string>
    <string name="main_process_name" translatable="false">:MainProcess</string>
    <string name="playback_process_name" translatable="false">:PlaybackProcess</string>
    <string name="cancel_label">Cancel</string>
    <string name="ok_label">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="descr_image">Image</string>
    <string name="stop_recording_warning_message">Do you also want to stop the recording session? You can keep recording in the background.</string>
    <string name="stop_recording_warning_title">Leaving application</string>
    <string name="recording_in_background_toast_message">Recording in background…</string>
    <string name="login_to_see_online_warning">Please log in to see your online recordings.</string>
    <string name="login_to_upload_warning">Please log in to upload your recordings.</string>
    <string name="stop_value_string">Stop</string>
    <string name="keep_value_string">Keep recording</string>
    <string name="log_out">Logout </string>
    <string name="tip_map_screen">Tip: Select a track from the map in order to visualise the photos</string>
    <string name="upload_all_label">Upload all</string>
    <string name="upload_all_warning">Upload all recordings and remove local files?</string>
    <string name="upload_all_warning_title">Uploading all recordings</string>
    <string name="no_internet_connection_label">No internet connection.</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="no_wifi_label">Connect to a hotspot or turn on upload using data in the settings.</string>
    <string name="something_wrong_try_again">Something went wrong, please try again later.</string>
    <string name="recording_deleted">Recording deleted.</string>
    <string name="upload_cancelled">Upload cancelled.</string>
    <string name="resuming_upload">Uploading…</string>
    <string name="upload_paused">Upload paused.</string>
    <string name="app_restarted">Application was restarted due to an error. Crash logs were sent.</string>
    <string name="loading_too_long">Loading is taking unusually long.</string>
    <string name="delete_online_track">Are you sure you want to delete this track?</string>
    <string name="delete_local_track">Are you sure you want to delete this track from the phone\'s storage?</string>
    <string name="delete_track_title">Delete track</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="guide">Guide</string>
    <string name="turn_off_screen_hint">You can turn off the screen or put the app in the background.</string>
    <string name="got_it_label">Got it</string>
    <string name="notification_sequence_recording_label">Sequence recording…</string>
    <string name="app_short_name" translatable="false">KV</string>
    <string name="hint_mount_label">Phone mount</string>
    <string name="hint_mount_message">Check that the front hood of the car and the phone’s mount are not visible in the pictures.</string>
    <string name="hint_windshield_label">Windshield</string>
    <string name="hint_windshield_message">Try to keep your car’s windshield clean.</string>
    <string name="hint_focus_label">Camera Focus</string>
    <string name="hint_focus_message">You can tap on screen to focus. Long press locks it.</string>
    <string name="hint_landscape_label">Landscape</string>
    <string name="hint_landscape_message">Record in landscape mode to capture better images. Turn your phone if possible.</string>
    <string name="login_label">Login</string>
    <string name="no_local_recordings_message">You have no local recordings.</string>
    <string name="exit_app_message">Are you sure you want to exit the app?</string>
    <string name="app_name_formatted" translatable="false">Karta View</string>
    <string name="exit_label">Exit</string>
    <string name="upload_finished">"Upload finished."</string>
    <string name="uploading_track_label">Uploading Track</string>
    <string name="nearby_no_result_label">Nothing here.</string>
    <string name="osm_login_label">Log in to osm</string>
    <string name="account_images_label">"IMAGES\n"</string>
    <string name="account_distance_label">"DISTANCE\n"</string>
    <string name="account_obd_label" translatable="false">"OBD\n"</string>
    <string name="reached_storage_limit">Reached storage limit, stopping recording.</string>
    <string name="encoding_error_message">Could not initialize/create mp4 file. Trying again.</string>
    <string name="take_picture_error_message">Could not take a picture. Trying again.</string>
    <string name="error_creating_video_file_message">Could not create video file.</string>
    <string name="upload_finished_message">"Track upload finished. "</string>
    <string name="uploading_images_message">Uploading images…</string>
    <string name="resume_label">Resume</string>
    <string name="pause_label">Pause</string>
    <string name="track_upload_paused">"Track upload paused… "</string>
    <string name="track_upload_resuming">"Track upload resuming… "</string>
    <string name="track_upload_cancelled">"Track upload cancelled. "</string>
    <string name="uploading_images">"Uploading images… "</string>
    <string name="not_logged_in">Not logged in.</string>
    <string name="pause_caps_label">PAUSE</string>
    <string name="continue_caps_label">CONTINUE</string>
    <string name="upload_label">Upload</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="resolutions_label">Resolutions</string>
    <string name="fast_recording_mode_on">Fast recording mode ON</string>
    <string name="focus_locked">Locked</string>
    <string name="stop_caps_label">STOP</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="permission_request">Permission request</string>
    <string name="permission_bluetooth_rationale">The app needs the location permission to be enabled to search for bluetooth devices in the proximity, please enable it in the next popup.</string>
    <string name="map_no_internet_connection">No internet connection. Map tiles cannot be loaded.</string>
    <string name="delete_track_and_dont_remind_me">Never ask again</string>
    <string name="delete_label">Delete</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="hint_points">Points</string>
    <string name="hint_points_message">You will get more points when the streets you\'re driving have less coverage. Get 10X for a new street in KartaView!</string>
    <string name="warning_swipe_recents_text">Please when you finish recording, re-enter the app to stop the recording before you dismiss the app from the recent applications screen.\nThis ensures that no recording will remain corrupt and that your tracks are written to the filesystem completely.</string>
    <string name="warning_label">Warning</string>
    <string name="warning_problems_recording">The app detected that you might have had problems with recording.\nIf you encountered crashes, we suggest enabling the jpeg recording mode:\nThis type of recording uses more storage space but requires less processing power than encoding to UHD x264 format.</string>
    <string name="jpeg_recording_label">JPEG Recording Mode</string>
    <string name="disable_label">Disable</string>
    <string name="enable_label">Enable</string>
    <string name="walkthrough_discover_title">Welcome to KartaView!</string>
    <string name="walkthrough_discover_text">You’re now joining a great community of people that contribute to a free and open platform for street imagery. By detecting street features from your photos we can build the best map in the world, together!</string>
    <string name="walkthrough_record_title">How do I contribute?</string>
    <string name="walkthrough_record_text">Use your phone to record the streets you drive, bike or walk, the app will take photos automatically and upload when Wi-Fi is available.</string>
    <string name="walkthrough_share_title">Make it count</string>
    <string name="walkthrough_share_text">Contribute your recordings, gain points and increase your ranking in the KartaView leaderboard.\n\nTip: Find streets that are not yet covered for many bonus points!</string>
    <string name="login_facebook_button_label">Login with Facebook</string>
    <string name="login_google_button_label">Login with Google</string>
    <string name="login_osm_button_label">Login with OpenStreetMap</string>
    <string name="check_internet_connection">No internet detected. Check your internet connection </string>
    <string name="issue_reporting_hint">Please describe the issue you experienced</string>
    <string name="issue_reporting_description">The app will send internal logs along with your observations, to correctly debug the issue you\'re describing.</string>
    <string name="issue_report_label">Report a problem</string>
    <string name="well_done_label">Well done!</string>
    <string name="points_label">Points </string>
    <string name="partial_estimated">(estimated)</string>
    <string name="don_t_show_again_label">Don\'t show again</string>
    <string name="account_distance_accepted_label">ACCEPTED\n</string>
    <string name="account_distance_rejected_label">REJECTED\n</string>
    <string name="profile_tbp_label_distance">DISTANCE</string>
    <string name="profile_tbp_label_value">VALUE</string>
    <string name="profile_user_rank">RANK</string>
    <string name="profile_user_score">SCORE</string>
    <string name="default_value_0">0</string>
    <string name="partial_img_label">IMG</string>
    <string name="partial_kmh_label">km/h</string>
    <string name="points_history_pictures">Pictures</string>
    <string name="points_history_multiplier">Multiplier</string>
    <string name="points_history_points">Points</string>
    <string name="total_value">Total Value:&#160;</string>
    <string name="profile_fetching_data">Fetching profile information…</string>
    <string name="leaderboard_all_time_label">All Time</string>
    <string name="leaderboard_this_month_label">This Month</string>
    <string name="leaderboard_this_week_label">This Week</string>
    <string name="leaderboard_this_day_label">This Day</string>
    <string name="leaderboard_tab_all_world">All World</string>
    <string name="leaderboard_tab_region">Region</string>
    <string name="wifi_adapters">Wi-Fi adapters</string>
    <string name="wifi_adapters_explication">Wi-Fi adapters create a hotspot and allows your iPhone or Android device connect to it. They\'re usually the cheapest but have a drawback: most phones lose Internet connectivity while connected to the OBD Wi-Fi hotspot.</string>
    <string name="recommended">Recommended:</string>
    <string name="veepeak_obd2">Veepeak Mini WiFi OBD2 Scanner Adapter for iOS and Android</string>
    <string name="get_on_amazon">Get on Amanzon</string>
    <string name="obd_ble_pair_guide_title">How to connect your\n OBD over Bluetooth LE</string>
    <string name="obd_ble_pair_guide_choose_devices">Choose Device</string>
    <string-array name="obd_ble_pair_guide">
        <item>@string/obd_pair_guide_find_your_car_instruction</item>
        <item>@string/obd_ble_pair_guide_settings_instruction</item>
        <item>@string/obd_pair_guide_return_instruction</item>
    </string-array>
    <string name="obd_wifi_dialog_connecting_info">Please wait while we\nconnect to your OBD device.</string>
    <string name="obd_wifi_dialog_cancel">Cancel</string>
    <string name="obd_wifi_dialog_try_again">Try again</string>
    <string name="obd_wifi_dialog_retry_title">Oops, no device found</string>
</resources>