<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/default_white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_custom_dialog_icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_custom_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector_obd_attention"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress_bar_custom_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/default_green"
            android:visibility="gone"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_view_custom_dialog_title"
        style="@style/obd_style_text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:paddingEnd="24dp"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_custom_dialog_icon_container"
        tools:text="@string/obd_wifi_dialog_retry_title"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_custom_dialog_info"
        style="@style/obd_style_text_subtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_custom_dialog_title"
        tools:text="@string/obd_wifi_dialog_connecting_info"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_dialog_obd_connecting_positive"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:background="@color/default_white"
        android:textColor="@color/default_blue"
        android:textSize="14sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_custom_dialog_info"
        tools:text="@string/obd_wifi_dialog_try_again"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_dialog_obd_connecting_negative"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/default_white"
        android:textColor="@color/default_blue"
        android:textSize="14sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/button_dialog_obd_connecting_positive"
        app:layout_constraintTop_toBottomOf="@id/text_view_custom_dialog_info"
        tools:text="@string/obd_wifi_dialog_cancel"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>